--- a/bower.json
+++ b/bower.json
@@ -14,7 +14,8 @@
     "ngGeolocation": "^0.0.8"
   },
   "devDependencies": {
-    "angular-mocks": "^1.4.0"
+    "angular-mocks": "^1.4.0",
+    "angular-bootstrap": "^2.0.1"
   },
   "appPath": "app",
   "moduleName": "butterflyappApp",
