--- a/bower.json
+++ b/bower.json
@@ -11,7 +11,8 @@
     "angular-route": "^1.4.0",
     "angular-sanitize": "^1.4.0",
     "angular-touch": "^1.4.0",
-    "ngGeolocation": "^0.0.8"
+    "ngGeolocation": "^0.0.8",
+    "angular-bootstrap": "^2.0.2"
   },
   "devDependencies": {
     "angular-mocks": "^1.4.0",
